--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
  	"dependencies": {
  		"express": "~4.11.0",
  		"ejs": "~2.1.4",
- 		"redis" : "0.12.1",
- 		"cookie-session": "~1.1.0",
+ 		"redis" : "~0.12.1",
+ 		"cookie-parser": "~1.3.4",
  		"body-parser": "~1.10.1",
- 		"node-uuid": "1.4.3",
- 		"async": "0.9.0"
+ 		"node-uuid": "~1.4.3",
+ 		"async": "~0.9.0"
  	},
  	"author": "Florent Baudon",
  	"description": "TP Twitter cours NoSQL"
