--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
  		"node-uuid": "~1.4.3",
  		"async": "~0.9.0"
  	},
+ 	 "scripts": {
+    "postinstall": "bower install",
+
+    "prestart": "npm install",
+    "start": "node TPTwitter.js"
+	},
  	"author": "Florent Baudon",
  	"description": "TP Twitter cours NoSQL"
  }
