--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "TP Twitter",
   "dependencies": {
-      "jquery" :  "2.1.3"
+      "jquery" :  "2.1.3",
+      "jquery.cookie" : "1.4.1"
   }
 }
