--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "TP Twitter",
   "dependencies": {
       "jquery" :  "2.1.3",
-      "jquery.cookie" : "1.4.1"
+      "jquery.cookie" : "1.4.1",
+      jquery-ui" : "1.11.4"
   }
 }
