--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,6 @@
   "dependencies": {
       "jquery" :  "2.1.3",
       "jquery.cookie" : "1.4.1",
-      jquery-ui" : "1.11.4"
+      "jquery-ui" : "1.11.4"
   }
 }
